--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 10px;
             text-align: center;
+            background-color:rgb(244, 233, 26);
         }
         .container {
             max-width: 100%;
@@ -18,6 +19,7 @@
             width: 100%;
             border-collapse: collapse;
             margin-top: 10px;
+            background-color: white;
         }
         th, td {
             border: 1px solid black;
